--- a/HTML/Inde.html
+++ b/HTML/Inde.html
@@ -9,8 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Raspberry Pi 5 Simulator</title>
         <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script>
-        <script src="Level_1.js"></script>
+        <script src="Js/script.js"></script>
+        <script src="Js/Level_1.js"></script>
     </head>
 
     <style>
@@ -47,8 +47,8 @@
             <p>&copy; 2024 Raspberry Pi 5 Simulator</p>
         </footer>
 
-        <script src="Audio.js"></script>
-        <script src="script.js"></script>
+        <script src="Js/Audio.js"></script>
+        <script src="Js/script.js"></script>
         
     </body>
     </html>
