--- a/HTML/Python.html
+++ b/HTML/Python.html
@@ -11,7 +11,7 @@
         margin: 0; /* Remove default margin */
     padding: 0; /* Remove default padding */
     height: 100vh; /* Make the body height equal to the viewport height */
-    background-image: url('Python.png'); /* Replace with your image path */
+    background-image: url('Images/Python.png'); /* Replace with your image path */
     background-size: cover; /* Make the background cover the entire screen */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Prevent the image from repeating */
@@ -28,11 +28,11 @@
         <button id="main-menu-btn" class="button">Main Menu</button>
         <button id="next-stage" class="button">Next Stage</button>
         
-        <audio id="clickSound" src="click.mp3" preload="auto"></audio>
-        <audio id="successSound" src="correct.mp3" preload="auto"></audio>
-        <audio id="errorSound" src="wrong.mp3" preload="auto"></audio>
+        <audio id="clickSound" src="audio/click.mp3" preload="auto"></audio>
+        <audio id="successSound" src="audio/correct.mp3" preload="auto"></audio>
+        <audio id="errorSound" src="audio/wrong.mp3" preload="auto"></audio>
     </div>
-    <script src="Audio.js"></script>
-    <script src="python.js"></script>
+    <script src="Js/Audio.js"></script>
+    <script src="Js/python.js"></script>
 </body>
 </html>
